# spam-detector

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: main.yaml
config/: settings.py
models/: spam_model.pkl
src/api/: main.py  schemas.py
src/features/: preprocessing.py
src/models/: classifier.py
tests/: test_api.py  test_preprocessing.py
